Fixed some spacing issues on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -77,8 +77,9 @@ label {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 4rem);
   align-content: center;
+  overflow: auto;
   filter: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"> \
   <filter id="glitch" x="0%" y="0%" width="100%" height="300%"> \
       <feTurbulence type="fractal" seed="1" baseFrequency="0 0.001" result="NOISE" numOctaves=".1"> \
